assets/css/style.css
/* add imports to the top*/

body {
    color: #fffff0;
    background-color: #573914;
}

/* headings and logos*/

#logo {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 280%;
    height: 20px;
    letter-spacing: 4px;
    text-transform: uppercase;
    margin-top: 10px;
    text-align: center;
}

 #hero-outer {
    height: 300px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 300px;
    width: 100%;
    background: url('../images/hero-image.jpg') no-repeat center center;
}

p {
    font-size: 18px;
    line-height: 20px;
}

/* navigation links */

#menu {
    font-size: 110%;
    letter-spacing: 4px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li{
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #fffff0;
}

.active {
    border-bottom: 1px solid #fffff0;
}

/* About section*/

.headings {
    text-align: center;
    font-size: 200%;
    line-height: 10px;
    clear: both;
    top: 30px;
}

.about-text {
    margin-left: auto;
    margin-right: auto;
    text-align: justify;
}

#image-about {
    height: 300px;
    width: 100%;
    object-fit: cover;
}

/* Activities Section */

.activities-image {
    height: 200px;
    width: 100%;
    object-fit: cover;
}

/* The Community Section */

.community-image {
    height: 250px;
    width: 100%;
    object-fit: cover;
}

.community-text {
    margin-left: auto;
    margin-right: auto;
    text-align: justify;
}

/* footer */

footer {
    height: 150px;
}

.social-networks {
    text-align: center;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #fffff0;
}

/* Sign-up section */

/* .form-section {
    clear: both;
    background: url("../images/horse-image.jpg");
    background-size: cover;
    background-position: center;
    height: 300px;
} */

.signup-form {
    margin: 0 10% 0 0;
    color: #fffff0;
    background-color: rgba(60, 60, 60, 0.6);
    max-width: 400px;
    left: 10%;
    padding: 30px;
}

.signup-form > h2 {
    color: #fffff0;
    margin-bottom: 20px;
}

.text-input {
    background: transparent;
    color: #fffff0;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #fffff0;
    border-radius: 2px;
}

.text-input:hover {
    border-color: #eff16b;
}

.join-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #fffff0;
    color: #573914;
    display: block;
}

.join-button:hover {
    background-color:  #eff16b;
    color: #573914;
}

/* Media Queries */

@media screen and (min-width: 768px) {
    body {
        width: 100%;
}

    .about-text {
    width: 250px;
    float: left;
    top: 10px;
    margin-left:25px;
}

#image-about {
    height: 300px;
    width: 60%;
    float: right;
} 
}

.activities-image {
    float: right;
    height: 100px;
    width: 60%;
    column-gap: 0;
    background-size: cover;
}

/* .community-image-left {
    clear: both;
    width: 80%;
    float: left;
    margin-left: 125px;
}

.community-image-right {
    height: 150px;
    width: 80%;
    float: right;
    margin-inline-start: 50px;
} */

